tests/success/00-basics/GlobalLiteral.vix
lit = 123

test = printInt lit
