tests/syntax-error/DefRecovery.vix
test = 610

test2

main = printInt test
